fix: add scrollbar

--- a/styles/_game.scss
+++ b/styles/_game.scss
@@ -1,7 +1,7 @@
 .game-container {
-  position: fixed;
+  position: relative;
   width: 100%;
-  height: 100vh;
+  height: 970px;
   min-width: 1700px;
   display: flex;
   align-content: space-around;
@@ -10,16 +10,10 @@
   background-color: #2f4353;
   background-image: linear-gradient(315deg, black 0%, black 74%);
 
-  @media (max-height: 930px) {
-    width: 1700px;
-    height: 930px;
-    overflow-x: hidden;
-  }
-
   .left-container {
     width: 20%;
     margin: 5px 5px;
-    height: inherit;
+    height: 970px;
     //background: rgba(255,255,255, 0.1);
     display: flex;
     flex-direction: column;
@@ -81,7 +75,6 @@
             "field-13 board board board board board board board board board field-39"
             "field-12 board board board board board board board board board field-40"
             "field-11 field-10 field-9 field-8 field-7 field-6 field-5 field-4 field-3 field-2 field-1";
-    height: inherit;
 
 
     .main-board {
